--- a/css/main.css
+++ b/css/main.css
@@ -10,43 +10,109 @@
   padding: 0;
 }
 
-html, body { height: 100%; }
+html, body { }
 
 body {
-  background-color: #FFF;
-  font: 13.34px Helvetica, Arial, sans-serif;
+  background-color: #fdfdfd;
   font-size: small;
-  text-align: center;
+  font-family: "Open Sans";
 }
 
 h1, h2, h3, h4, h5, h6 {
   font-size: 100%; }
 
 h1 { margin-bottom: 1em; }
-p { margin: 1em 0; }
+p { padding-top: 1em; }
 
-a         { color: #00a; }
-a:hover   { color: #000; }
-a:visited { color: #a0a; }
+a         { color: #303030; text-decoration: none;}
+a:hover   { color: #303030; opacity: .65;}
+a:visited { color: #303030; }
 
 /*****************************************************************************/
 /*
 /* Home
 /*
 /*****************************************************************************/
+
+#miniabout {
+  padding-top: 2em;
+  padding-bottom: 2em;
+  border-bottom: 1px solid #66B5F3;
+  margin-bottom: 2em;
+}
+
 .posts {
   list-style-type: none;
-  margin-bottom: 2em;
+  width:436px;
+  float: left;
+  margin: 5px;
+  padding: 16px;
+  background-color: #fff;
+  font-weight: 400;
+  border: 1px solid #ddd;
+}
+
+.posts:hover {
+  background-color: #fafafa;
 }
 
 .posts li {
   line-height: 1.75em;
 }
 
-.posts span {
-  color: #aaa;
+.date {
+  color: #555;
   font-family: Monaco, "Courier New", monospace;
-  font-size: 80%;
+  font-size: 100%;
+  float: right;
+}
+
+.posts .body {
+  color: #000;
+}
+
+/*****************************************************************************/
+/*
+/* Navigation
+/*
+/*****************************************************************************/
+#navigation {
+  padding-left: 0.3em;
+  background-color: #fff;
+  font-size: 1.2em;
+  width: 100%;
+  border-bottom: 1px solid #ddd;
+  margin: 0 auto;
+  padding-top: 1em;
+  padding-bottom: 1em;
+}
+
+#navigation ul {
+  list-style-type:none;
+  display: inline-block;
+}
+
+#navigation ul li {
+  display: inline;
+  margin-left: 181px;
+}
+
+#navigation ul li:first-child {
+  margin-left: 0px;
+}
+
+#navigation ul li:first-child a {
+  color: #66B5F3;
+  font-weight: 600;
+}
+
+#navigation .projects {
+  text-indent: 1em;
+}
+
+#navigation .nav-content {
+  width: 960px;
+  margin: 0 auto;
 }
 
 /*****************************************************************************/
@@ -55,30 +121,45 @@ a:visited { color: #a0a; }
 /*
 /*****************************************************************************/
 
-.site {
+.content {
   font-size: 115%;
-  text-align: justify;
-  width: 42em;
-  margin: 3em auto 2em;
-  line-height: 1.5em;
+  width: 960px;
+  line-height: 1.2em;
+  margin: 0 auto;
+  background-color: #fdfdfd;
+}
+
+.accent {
+  color: #66B5F3;
+}
+
+.accent:visited {
+  color: #66B5F3;
+}
+
+.header {
+  font-weight: 300;
+  font-size: 1.1em;
 }
 
 .header a {
-  font-weight: bold;
-  text-decoration: none;
+  font-weight: 600;
+}
+
+.header h2 {
+  width: 18em;
 }
 
 .title {
   display: inline-block;
-  margin-bottom: 2em;
+  margin-bottom: .3em;
+  font-weight: 300;
+  line-height: .9em;
 }
 
 .title a {
-  color: #a00;
-}
-
-.title a:hover {
-  color: #000;
+  color: #66B5F3;
+  font-weight:600;
 }
 
 .header a.extra {
@@ -88,10 +169,6 @@ a:visited { color: #a0a; }
 
 .header a.extra:hover {
   color: #000;
-}
-
-.meta {
-  color: #aaa;
 }
 
 .footer {
@@ -126,6 +203,9 @@ a:visited { color: #a0a; }
 /* Posts
 /*
 /*****************************************************************************/
+.post {
+  margin: 0em 1em 0em 1em;
+}
 
 /* standard */
 .post pre {
