Making it responsive

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,5 @@
 <div id="navigation">
-  <div class="nav-content">
+  <nav class="nav-collapse">
     <ul class="links">
       <li><a href="/">AL</a></li>
       <li><a href="/projects/">Projects</a></li>
@@ -7,5 +7,5 @@
       <li><a href="http://github.com/alaycock/Resume/">Resume</a></li>
       <li><a href="http://github.com/alaycock">Github</a></li>
     </ul>
-  </div>
+  </nav>
 </div>
