--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,9 @@
         <link rel="stylesheet" href="/css/responsive-nav.css">
         <script src="/js/responsive-nav.min.js"></script>
 
+        <!-- Masonry -->
+        <script src="/js/masonry.pkgd.min.js"></script>
+
         <!-- syntax highlighting CSS -->
         <link rel="stylesheet" href="/css/syntax.css">
 
@@ -27,6 +30,10 @@
         </div>
         <script>
           var nav = responsiveNav(".nav-collapse");
+
+          var elem = document.querySelector('#grid');
+
+          var msnry = new Masonry(elem);
         </script>
     </body>
 </html>
