--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -1,9 +1,13 @@
 ---
 layout: default
 ---
+
 <div class="post githubmd">
   <p class="date">{{ page.date | date_to_string }}</p>
   <h1>{{ page.title }}</h1>
+  {% if page.githuburl %}
+    <a class='accent' href='{{page.githuburl}}'>View on Github</a>
+  {% endif %}
   {{ content }}
 </div>
 
@@ -21,4 +25,3 @@ layout: default
 </script>
 <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
-
