--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,8 +11,9 @@
         <link rel="stylesheet" href="/css/responsive-nav.css">
         <script src="/js/responsive-nav.min.js"></script>
 
-        <!-- Masonry -->
-        <script src="/js/masonry.pkgd.min.js"></script>
+        <!-- Organize divs -->
+        <script src="/js/jquery-1.11.3.min.js"></script>
+        <script src="/js/jquery.freetile.min.js"></script>
 
         <!-- syntax highlighting CSS -->
         <link rel="stylesheet" href="/css/syntax.css">
@@ -30,10 +31,6 @@
         </div>
         <script>
           var nav = responsiveNav(".nav-collapse");
-
-          var elem = document.querySelector('#grid');
-
-          var msnry = new Masonry(elem);
         </script>
     </body>
 </html>
