Making links more readable

--- a/css/main.css
+++ b/css/main.css
@@ -149,11 +149,11 @@ a:visited { color: #303030; }
 }
 
 .accent {
-  color: #66B5F3;
+  color: #126FB8;
 }
 
 .accent:visited {
-  color: #66B5F3;
+  color: #126FB8;
 }
 
 .header {
