Making links more readable 2

--- a/css/github.css
+++ b/css/github.css
@@ -11,11 +11,11 @@
   margin-bottom: 0 !important; }
 
  .githubmd a {
-   color: #66B5F3;
+   color: #126FB8;
  }
 
  .githubmd a:visited {
-   color: #66B5F3;
+   color: #126FB8;
  }
 
 .githubmd a.anchor {
