--- a/css/github.css
+++ b/css/github.css
@@ -2,8 +2,7 @@
   font-size: 14px;
   line-height: 1.6;
   padding-top: 10px;
-  padding-bottom: 10px;
-  padding: 30px; }
+  padding-bottom: 10px; }
 
 .githubmd > *:first-child {
   margin-top: 0 !important; }
