--- a/css/main.css
+++ b/css/main.css
@@ -95,6 +95,10 @@ a:visited { color: #303030; }
   padding-bottom: 1em;
 }
 
+#navigation .nav-toggle {
+  padding-left: .8em;
+}
+
 #navigation ul li:first-child a {
   color: #66B5F3;
   font-weight: 600;
@@ -108,7 +112,7 @@ a:visited { color: #303030; }
 @media screen and (max-width: 990px) {
   #navigation ul li {
     border-top: 1px solid #ddd;
-    padding: .5em .5em;
+    padding: .5em 1.5em;
   }
 
   #navigation ul li:first-child {
