--- a/css/main.css
+++ b/css/main.css
@@ -89,10 +89,12 @@ a:visited { color: #303030; }
   background-color: #fff;
   font-size: 1.2em;
   width: 100%;
-  border-bottom: 1px solid #ddd;
   margin: 0 auto;
   padding-top: 1em;
   padding-bottom: 1em;
+  position: relative;
+  z-index: 1;
+  box-shadow: 0px 0px 15px #888888;
 }
 
 #navigation .nav-toggle {
@@ -151,6 +153,8 @@ a:visited { color: #303030; }
   background-color: #fdfdfd;
   padding-left: 1em;
   padding-right: 1em;
+  position: relative;
+  z-index: 0;
 }
 
 .accent {
