--- a/css/main.css
+++ b/css/main.css
@@ -25,8 +25,8 @@ h1 { margin-bottom: 1em; }
 p { padding-top: 1em; }
 
 a         { color: #303030; text-decoration: none;}
-a:hover   { color: #303030; opacity: .65;}
-a:visited { color: #303030; }
+a:hover   { color: #9CCFF7; }
+/*a:visited { color: #303030; }*?
 
 /*****************************************************************************/
 /*
@@ -51,6 +51,7 @@ a:visited { color: #303030; }
   background-color: #fff;
   font-weight: 400;
   border: 1px solid #ddd;
+  transition: background-color .3s ease-out;
 }
 
 @media screen and (max-width: 990px) {
@@ -101,8 +102,17 @@ a:visited { color: #303030; }
   padding-left: .8em;
 }
 
+#navigation ul li a {
+  transition: color .3s ease-out;
+}
+
 #navigation ul li:first-child a {
   color: #66B5F3;
+  font-weight: 600;
+}
+
+#navigation ul li:first-child a:hover {
+  color: #9CCFF7;
   font-weight: 600;
 }
 
