Update resume, style tweaks

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,11 +1,9 @@
-<div id="navigation">
-  <nav class="nav-collapse">
-    <ul class="links">
-      <li><a href="/">AL</a></li>
-      <li><a href="/projects/">Projects</a></li>
-      <li><a href="/blog/">Blog</a></li>
-      <li><a href="/resume/">Resume</a></li>
-      <li><a href="http://github.com/alaycock">Github</a></li>
-    </ul>
-  </nav>
-</div>
+<nav id="navigation">
+  <ul class="links">
+    <li><a href="/">AL</a>
+    </li><li><a href="/projects/">Projects</a>
+    </li><li><a href="/blog/">Blog</a>
+    </li><li><a href="/resume/">Resume</a>
+    </li><li><a href="http://github.com/alaycock">Github</a></li>
+  </ul>
+</nav>
