--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,9 +7,8 @@
         <title>{{ page.title }}</title>
         <meta name="viewport" content="width=device-width,initial-scale=1">
 
-        <!-- Responsive Nav -->
-        <link rel="stylesheet" href="/css/responsive-nav.css">
-        <script src="/js/responsive-nav.min.js"></script>
+        <!-- Icons -->
+        <link rel="stylesheet" href="/css/font-awesome.min.css">
 
         <!-- syntax highlighting CSS -->
         <link rel="stylesheet" href="/css/syntax.css">
@@ -24,10 +23,8 @@
           <div class="content">
             {{ content }}
           </div>
+          {% include footer.html %}
         </div>
-        <script>
-          var nav = responsiveNav(".nav-collapse");
-        </script>
         <script>
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
