--- a/css/main.scss
+++ b/css/main.scss
@@ -160,11 +160,33 @@ a:hover   { color: #6CB8F3; }
 /*****************************************************************************/
 
 #footer {
-  max-width: 960px;
-  margin: 30px auto 20px;
+  width: 100%;
+  background-color: #F3F3F3;
+  position: relative;
 
-  .container {
-    margin: 0 20px;
+  #footerCanvas {
+    width: 100%;
+    height: 200px;
+  }
+
+  .footerContent {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    // margin: 0 auto;
+
+
+
+    .centerer {
+      max-width: 960px;
+      padding: 30px 0 0 ;
+      margin: 0 auto;
+    }
+
+    .padLeft {
+      padding-left: 20px;
+    }
 
     h3 {
       font-size: 20px;
@@ -197,7 +219,7 @@ a:hover   { color: #6CB8F3; }
   font-size: 115%;
   max-width: 960px;
   line-height: 1.2em;
-  margin: 0 auto;
+  margin: 0 auto 30px;
   background-color: #fdfdfd;
   padding-left: 1em;
   padding-right: 1em;
@@ -241,33 +263,6 @@ a:hover   { color: #6CB8F3; }
 
 .header a.extra:hover {
   color: #000;
-}
-
-.footer {
-  font-size: 80%;
-  color: #666;
-  border-top: 4px solid #eee;
-  margin-top: 2em;
-  overflow: hidden;
-}
-
-.footer .contact {
-  float: left;
-  margin-right: 3em;
-}
-
-.footer .contact a {
-  color: #8085C1;
-}
-
-.footer .rss {
-  margin-top: 1.1em;
-  margin-right: -.2em;
-  float: right;
-}
-
-.footer .rss img {
-  border: 0;
 }
 
 /*****************************************************************************/
