--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,5 @@
 <section id="footer">
-  <canvas id="footerCanvas">
-  </canvas>
+  <canvas id="footerCanvas"></canvas>
   <script src="/js/lightning.js"></script>
   <div class='footerContent'>
     <div class='centerer'>
@@ -25,6 +24,11 @@
         <li>
           <a href='https://news.ycombinator.com/user?id=level'>
             <i class="fa fa-hacker-news"></i>
+          </a>
+        </li>
+        <li>
+          <a href='https://bughunter.withgoogle.com/profile/33907608-3a40-4567-bc1f-02105199f4f6'>
+            <i class="fa fa-google"></i>
           </a>
         </li>
         <li>
