--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,8 +2,8 @@
 layout: default
 ---
 <div class="post githubmd">
-  <p class="date">{{ page.date | date_to_string }}</p>
   <h1>{{ page.title }}</h1>
+  <p class="postDate">{{ page.date | date_to_string }}</p>
   {{ content }}
 </div>
 
