--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -3,11 +3,15 @@ layout: default
 ---
 
 <div class="post githubmd">
-  <p class="date">{{ page.date | date_to_string }}</p>
-  <h1>{{ page.title }}</h1>
-  {% if page.githuburl %}
-    <a class='accent' href='{{page.githuburl}}'>View on Github</a>
-  {% endif %}
+
+  <h1>{{ page.title }}
+    {% if page.githuburl %}
+      <a class='accent' href='{{page.githuburl}}'><i class="fa fa-github"></i></a>
+    {% endif %}
+  </h1>
+  <p class="postDate">{{ page.date | date_to_string }}</p>
+
+
   {{ content }}
 </div>
 
