--- a/css/main.scss
+++ b/css/main.scss
@@ -276,7 +276,7 @@ a:hover   { color: #6CB8F3; }
 /*
 /*****************************************************************************/
 .post {
-  width: 700px;
+  max-width: 700px;
   margin: 30px auto 10px;
 }
 
