Fix canvas style, thanks Amanda

--- a/css/main.scss
+++ b/css/main.scss
@@ -172,6 +172,7 @@ a:hover   { color: #6CB8F3; }
   #footerCanvas {
     width: 100%;
     height: 200px;
+    display: block;
   }
 
   .footerContent {
