--- a/css/github.css
+++ b/css/github.css
@@ -187,7 +187,7 @@
     table tr th :last-child, .githubmd table tr td :last-child {
       margin-bottom: 0; }
 
-.githubmd img {
+.githubmd img, .githubmd video {
   max-width: 100%;
   box-shadow: 0px 5px 20px #888;
 }
