--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
   <div class='footerContent'>
     <div class='centerer'>
       <h3 class='padLeft'>Adam Laycock</h3>
-      <p class='padLeft'>I am Calgary born and raised software, web, and mobile application developer.</p>
+      <p class='padLeft'>I am Calgary based full-stack application developer.</p>
       <ul class='social padLeft'>
         <li>
           <a href='https://github.com/alaycock'>
@@ -19,16 +19,6 @@
         <li>
           <a href='https://ca.linkedin.com/in/adam-laycock-059b4b56'>
             <i class="fa fa-linkedin"></i>
-          </a>
-        </li>
-        <li>
-          <a href='https://news.ycombinator.com/user?id=level'>
-            <i class="fa fa-hacker-news"></i>
-          </a>
-        </li>
-        <li>
-          <a href='https://bughunter.withgoogle.com/profile/33907608-3a40-4567-bc1f-02105199f4f6'>
-            <i class="fa fa-google"></i>
           </a>
         </li>
         <li>
